# datacube-wcps-integration

./: README.md
Sprint1/: README.md
Sprint1/sprint_1/: README.md  dbc.py  dco.py  main.py
Sprint2/: README.md
Sprint2/sprint_1/wdc/: README.md  funcs.py  pyproject.toml  test.py
Sprint2/sprint_1/wdc/tests/: example_query.py  test.py  test_sprint_2.py
Sprint2/sprint_1/wdc/wdc/: __init__.py  dbc_connection.py  dbo_datacube.py
Sprint3/: README.md  testcases.py
Sprint3/wdc/: Connection.py  Params.py  Query.py  __init__.py  pyproject.toml
